# LIbraryTaskManager

./: .gitmodules  CMakeLists.txt  Design.md  Design.md.txt  README.md  book.cpp  book.h  book_test.cpp  main.cpp  task.cpp  task.h  task_test.cpp  user.cpp  user.h  user_test.cpp
Desktop/LibraryTaskManager/: book.cpp  book_test.cpp  task.cpp  task.h  task_test.cpp  user.cpp  user.h
LibraryTaskManager/: CMakeLists.txt  book.cpp  book.h  book_test.cpp  main.cpp  task.cpp  task.h
LibraryTaskManager/LibraryTaskManager/: main.cpp  task_test.cpp  user.cpp
LibraryTaskManager/googletest/docs/: advanced.md  gmock_cook_book.md
LibraryTaskManager/googletest/git/: config  index  packed-refs
LibraryTaskManager/googletest/git/logs/refs/remotes/origin/: HEAD
LibraryTaskManager/googletest/git/objects/pack/: pack-2edb945e65d4547eaa22e7dadfe0b9071f8ac3bc.idx  pack-2edb945e65d4547eaa22e7dadfe0b9071f8ac3bc.rev
LibraryTaskManager/googletest/git/refs/heads/: main
LibraryTaskManager/googletest/googlemock/include/gmock/: gmock-matchers.h
include/: user.h
src/: task.cpp
tests/: task_test.cpp  user_test.cpp
